--- a/invenio_oauth2server/templates/invenio_oauth2server/settings/helpers.html
+++ b/invenio_oauth2server/templates/invenio_oauth2server/settings/helpers.html
@@ -1,6 +1,6 @@
 {#
 # This file is part of Invenio.
-# Copyright (C) 2014, 2015 CERN.
+# Copyright (C) 2014, 2015, 2017 CERN.
 #
 # Invenio is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License as
@@ -28,9 +28,9 @@
         <div class="panel-heading">
             <strong>{%if icon %}<i class="{{icon}}"></i>{% endif %} {{title}}</strong>
             {%- if btn and (btn_href or btn_text) -%}
-            <div class="pull-right" style="margin-left: 5px;">
+            <div class="pull-right">
             {%- if btn_text %}
-                <small class="text-muted" style="padding-right: 10px;">(updated {{last_sync}})</small>
+                <small class="text-muted">(updated {{last_sync}})</small>
             {%- endif %}
             {%- if btn_href %}
             <a class="pull-right btn btn-xs {{btn_class}}" href="{{btn_href}}">{% if btn_icon %}<i class="{{btn_icon}}"></i> {% endif %}{{btn}}</a>
@@ -42,7 +42,7 @@
             </div>
             {%- endif -%}
             {%- if btn2 and btn_href2 -%}
-            <div class="pull-right" style="margin-left: 5px;">
+            <div class="pull-right">
             {%- if btn_href2 %}
             <a class="pull-right btn btn-xs {{btn_class2}}" href="{{btn_href2}}">{% if btn_icon2 %}<i class="{{btn_icon2}}"></i> {% endif %}{{btn2}}</a>
             {%- else %}
